<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragment.JogoFragment"
    android:background="@color/black"
    >

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"

        >


        <TextView
         android:paddingLeft="10dp"
            android:id="@+id/tvJoga1"
            android:layout_width="391dp"
            android:layout_height="wrap_content"
            android:background="@color/rosa"
            android:text="@string/jogador"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_weight="0"
            android:textStyle="bold"
            android:textAlignment="center"
            />

        <TextView

            android:id="@+id/placarOne"
            android:layout_width="23dp"
            android:layout_height="match_parent"
            android:background="@color/rosa"
            android:text="@string/placarOne"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/purple_500"
        />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView

            android:id="@+id/tvJoga2"
            android:layout_width="391dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="@color/rosa"
            android:paddingLeft="10dp"
            android:text="@string/jogadorDois"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:textColor="@color/white"
            android:id="@+id/placarTwo"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/placarTwo"
            android:background="@color/rosa"
            android:layout_marginTop="2dp"
            android:textAlignment="center"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView

            android:id="@+id/velha"
            android:layout_width="391dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="@color/rosa"
            android:paddingLeft="10dp"
            android:text="@string/velha"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:textColor="@color/white"
            android:id="@+id/ContVelha"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/placarVelha"
            android:background="@color/rosa"
            android:layout_marginTop="2dp"
            android:textAlignment="center"
            />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <Button

                android:id="@+id/bt00"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textSize="50sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/bt01"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textSize="50sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/bt02"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textSize="50sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button

                android:id="@+id/bt10"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textSize="50sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/bt11"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textSize="50sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/bt12"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textSize="50sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button

                android:id="@+id/bt20"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textSize="50sp"
                android:textColor="@color/black"
                android:textStyle="bold"

                />

            <Button
                android:id="@+id/bt21"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textSize="50sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/bt22"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textSize="50sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />


        </TableRow>


    </TableLayout>

</LinearLayout>